# voxfield

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/voxfield/: chunk.hpp  cluster.hpp  registry.hpp  structure.hpp  texture.hpp  voxel.hpp
include/voxfield/client/system/: mesher.hpp  world.hpp
include/voxfield/client/system/graphics/: geometry.hpp
include/voxfield/client/system/graphics/geometry/: opaque.hpp
include/voxfield/client/system/render/: geometry.hpp
include/voxfield/client/system/render/geometry/: opaque.hpp
include/voxfield/system/: generator.hpp
resources/scenes/: unnamed.scene
resources/shaders/common/: chunk.gsl
resources/shaders/geometry/: opaq-vox.frag  opaq-vox.vert
source/: client.cpp  server.cpp
source/client/system/: mesher.cpp  world.cpp
source/client/system/graphics/: geometry.cpp
source/client/system/graphics/geometry/: opaque.cpp
source/client/system/render/: geometry.cpp
source/client/system/render/geometry/: opaque.cpp
source/core/system/: generator.cpp
source/shared/system/: generator.cpp
